# perceptron_banco

./: README.md  pyproject.toml
data/: bancario.csv
notebook/: classificacao_banco.ipynb
